--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <p>Jalan Mimpi KM. 9, Nirmala, 
                 Paramudya, Kec. Kembang, Kota Grecol</p>
             <div class="sosmed">
-                <a href="https://www.instagram.com/phasa.well/"><img src="../img/ig2.png" alt="instagram"></a>
-                <a href="https://wa.me/6289623567545"><img src="../img/wa.png" alt="whatsapp"></a>
-                <a href="#"><img src="../img/ty.png" alt="youtube"></a>
+                <a href="https://www.instagram.com/phasa.well/"><img src="img/ig2.png" alt="instagram"></a>
+                <a href="https://wa.me/6289623567545"><img src="img/wa.png" alt="whatsapp"></a>
+                <a href="#"><img src="img/ty.png" alt="youtube"></a>
             </div>
         </div>
     </section>
@@ -103,3 +103,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
